# chopok

./: .env_example  chopok.sqlite3  dao.py  database.py  main.py  my_chopok.sqlite3  pyproject.toml
api/: api_products.py  api_users.py
background_tasks_chopok/: confirm_registration.py
templates/: base.html  index.html  login.html  navbar.html  registration.html
utils/: jwt_auth.py
web/: web_products.py  web_users.py
