[tool.poetry]
name = "my-chopok"
version = "0.1.0"
description = ""
authors = ["Dima2024-python <chagaydapython2024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
sqlalchemy = "^2.0.34"
bcrypt = "^4.2.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
